--- a/src/components/LoginAndRegisterForm/index.css
+++ b/src/components/LoginAndRegisterForm/index.css
@@ -1,39 +1,12 @@
-.loginContainer {
-  background-color: lightblue;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.loginBox {
-  padding: 20px;
-  background: white;
-  box-shadow: 0px 4px 16px 0px #bfbfbf;
-  height: 50%;
-}
-.inputContainer {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 14px;
-}
-.inputLabel {
-  color: green;
-  font-size: 14px;
-}
-.inputElement {
-  width: 100%;
-  min-width: 350px;
-}
-
 .hero {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url("https://res.cloudinary.com/srinu879033/image/upload/v1638547048/7-ways-to-make-distance-learning-more-equitable-article_csp2qo.png");
-  background-position: center;
   background-size: cover;
-  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .form-box {
@@ -44,6 +17,11 @@
   background: #ffffff;
   padding: 5px;
   overflow: hidden;
+}
+@media all and (max-width: 500px) {
+  .form-box {
+    width: 80%;
+  }
 }
 
 .button-box {
@@ -79,19 +57,13 @@
   text-align: center;
 }
 
-.social-icons img {
-  width: 30px;
-  margin: 0 12px;
-  box-shadow: 0 0 20px 0 #7f7f7f3d;
-  cursor: pointer;
-  border-radius: 50%;
-}
-
 .input-group {
-  top: 180px;
+  margin-top: 16px;
   position: absolute;
-  width: 280px;
-  transition: 0.5s;
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .input-field {
@@ -130,9 +102,14 @@ span {
 }
 
 #login {
-  left: 50px;
+  left: 13%;
 }
-
 #register {
-  left: 50px;
+  left: 13%;
+}
+.error-msg {
+  font-size: 12px;
+  text-align: left;
+  color: red;
+  margin: 2px;
 }
