--- a/src/frontend/react/src/components/LoginAndRegisterForm/index.css
+++ b/src/frontend/react/src/components/LoginAndRegisterForm/index.css
@@ -11,7 +11,7 @@
 
 .form-box {
   width: 380px;
-  height: 480px;
+  min-height: 480px;
   position: relative;
   margin: 6% auto;
   background: #ffffff;
@@ -69,7 +69,7 @@
 .input-field {
   width: 100%;
   padding: 10px 0;
-  margin: 5px 0;
+  margin: 4px 0;
   border-left: 0;
   border-top: 0;
   border-right: 0;
@@ -108,8 +108,8 @@ span {
   left: 13%;
 }
 .error-msg {
-  font-size: 12px;
+  font-size: 11px;
   text-align: left;
   color: red;
-  margin: 2px;
+  margin: 1px;
 }
